--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link rel="stylesheet" type="text/css" href="dep/normalize.css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="dep/Font-Awesome/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+
+     <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    .content {
+      text-align: center;
+    }
+  </style>
+    
   </head>
   <body lang="en">
     <section id="main">
