--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body lang="en">
     <section id="main">
       <header id="title">
-        <h1>John Doe111111</h1>
+        <h1>John Doe</h1>
         <span class="subtitle">Plaintiff, defendant &amp; witness</span>
       </header>
       <section class="main-block">
