--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       top: 0;
       left: 0%;
       right: 0;
-      background-color: rgb(239, 200, 215);
+      background-color: rgb(230, 237, 247);
       padding: 10px 0;
       text-align: center;
       width: 100%;
@@ -39,7 +39,7 @@
     }
 
     #navbar li.special {
-      color:#f3f4f7;
+      color:#000000;
       font-weight: bolder;
       font-size: 26px;
       margin-right: 500px;
@@ -99,7 +99,7 @@
       background-image: url('16.jpg');
     background-size: cover;
     background-position: bottom;
-    background: opacity 0.1em;;
+
     }
 
     
@@ -115,6 +115,13 @@
       margin-left: 11%;
     }
 
+    .profile-info {
+      overflow: hidden;
+      margin-left: 9%;
+      margin-right: 0%;
+      padding: 70px;
+    }
+    
     .profile-paper {
       float: left;
       margin-top: 0%;
@@ -198,12 +205,7 @@
 
 
 
-    .profile-info {
-      overflow: hidden;
-      margin-left: 9%;
-      margin-right: 0%;
-      padding: 70px;
-    }
+
 
     p {
       margin-bottom: 25px;
@@ -301,7 +303,7 @@
       </div>
 
       <div class="profile-info" id="basic-info" >
-
+        <br><br>
         <h4 class="font-color">地址：上海市闵行区东川路800号上海交通大学电子信息与电气工程学院</h4>
         <h4 class="font-color">电子邮箱：kejing@cs.sjtu.edu.cn</h4>
         <h4 class="font-color">简介：博士毕业于澳大利亚新南威尔士大学，目前在上海交通大学计算机系任助理研究员硕导、新南威尔士大学联席讲师（Adjunct Lecturer）。在S3 Graphics，AMD和CSIRO等机构有多年的商业经验。目前主要的研究方向为病理图像的智能分析诊断及大规模图像的高性能并行计算。在医学图像分析领域以一作或通讯在MedIA、TMI、MICCAI等期刊会议发表论文三十篇；在高性能并行计算领域会议如IPDPS、MICRO、DAC等发表论文十篇。出版著作“通用图形处理器设计-GPGPU编程模型与架构原理”（清华大学出版社）。主持国家自然科学基金青年项目，上海市自然科学基金面上项目，以及两项“交大之星“计划医工交叉研究基金；并于国家知识产权局授权专利三项。担任MICS、CSIG、CAAI等学会专委，Frontiers in Radiology 的主题编委；长期担任TPAMI、TMI和MICCAI等期刊会议的审稿人。</h4>
@@ -314,15 +316,15 @@
       <div class="profile-content" >
         <section class="profile-paper">
         <div >
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
           <h1 class="no-wrap">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp论文发表&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp       </h1>
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
         </section>
 
         <div class="profile-paperinfo" >
 
-          <h2>期刊代表作</h2>
+        <h2>期刊代表作</h2>
         <p>1)	<b>J Ke</b>, K Liu, Y Sun, Y Xue, J Huang, Y Lu, J Dai, Y Chen, X Han, Y Shen, D Shen. Artifact Detection and Restoration in Histology Images with Stain-Style and Structural Preservation. <i>IEEE Transactions on Medical Imaging </i>(TMI), 2023 Early Access (SCI中科院1区, 影响因子 IF 11.0, CCF-B).</p>
         <p>2)	<b>J Ke</b>, Y Lu, Y Shen, J Zhu, Y Zhou, J Huang, J Yao, X Liang, Y Guo, Z Wei, S Liu, Q Huang, F Jiang & D Shen. A crowd cluster pinpointed nucleus segmentation framework with cross-modality datasets. <i>Medical Image Analysis</i> (MedIA), 2023, 85(102758):  (SCI中科院1区, 影响因子 IF 13.8).</p>
         <p>3)	<b>J Ke</b>, Y Shen, Y Lu, Y Guo & D Shen. Mine Local Homogeneous Representation by Interaction Information Clustering with Unsupervised Learning in Histopathology Images. <i>Computer Methods and Programs in Biomedicine</i>. 2023. (SCI中科院2区, 影响因子 IF 7.0).</p>
@@ -399,16 +401,18 @@
     <div class="section" id="patent">
       <div class="profile-content" >
         <div class="profile-patent" >
-          <br>
+          <br><br>
           <h1 class="no-wrap" >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp国家知识产权局&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br>专利授予<br>（第一发明人）</h1>
           <br><br>
         </div>
   
         <div class="profile-patentinfo" >
           <p>细胞病理图像分割方法及装置； ZL202011379134.0；授权公告日， 2022-11-01</p>
-        <p>病理图像染色风格归一化方法及装置；ZL202010912039.6；授权公告日：2022-11-01</p>
-        <p>图像分类方法、装置、电子设备和存储介质；ZL202110510967.4；授权公告日：2021-5-11</p>
+          <p>病理图像染色风格归一化方法及装置；ZL202010912039.6；授权公告日：2022-11-01</p>
+          <p>图像分类方法、装置、电子设备和存储介质；ZL202110510967.4；授权公告日：2021-5-11</p>
         </div>
+
+
       </div>
     </div>
 
