--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     }
 
     .container {
-      max-width: 75%;
+      max-width: 95%;
       background-color: #ffffff;
       
       font-size: larger;
@@ -133,9 +133,9 @@
     }
     .profile-paperinfo {
       overflow: hidden;
-      margin-left: 0%;
-      margin-right: 0%;
-      padding: 70px;
+      margin-left: 70px;
+      margin-right: 10px;
+      padding: 0px;
     }
 
     .profile-book {
@@ -212,7 +212,7 @@
     }
 
     .section {
-      padding: 2px;
+      padding: 0px;
       color: #000;
     }
 
@@ -316,9 +316,9 @@
       <div class="profile-content" >
         <section class="profile-paper">
         <div >
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-          <h1 class="no-wrap">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp论文发表&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp       </h1>
-          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+          <h1 class="no-wrap">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp论文发表&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp       </h1>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
         </section>
 
@@ -364,8 +364,8 @@
 
     <div class="profile-content" >
       <div class="profile-book">
-        <br><br><br>
-        <h1 class="no-wrap" >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp出版著作&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
+        <br><br>
+        <h1 class="no-wrap" >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp出版著作&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
         <br><br>
       </div>
 
@@ -380,7 +380,7 @@
     <div class="profile-content" >
       <div class="profile-fund">
         <br><br><br><br><br><br><br>
-        <h1 class="no-wrap">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp项目资助&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
+        <h1 class="no-wrap">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp项目资助&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
         <br><br><br><br><br><br><br>
       </div>
 
@@ -402,7 +402,7 @@
       <div class="profile-content" >
         <div class="profile-patent" >
           <br><br><br><br>
-          <h1 class="no-wrap" >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp国家知识产权局&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<br>专利授予</h1>
+          <h1 class="no-wrap" >&nbsp&nbsp&nbsp&nbsp&nbsp国家知识产权局&nbsp&nbsp&nbsp&nbsp<br>专利授予</h1>
           <br><br><br><br>
         </div>
   
@@ -423,7 +423,7 @@
       <div class="profile-content" >
         <div class="profile-student">
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-          <h1 class="no-wrap">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp学生培养&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
+          <h1 class="no-wrap">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp学生培养&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
           <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
   
