--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     }
 
     .container {
-      max-width: 95%;
+      max-width: 96%;
       background-color: #ffffff;
       
       font-size: larger;
@@ -101,6 +101,7 @@
       background-image: url('16.jpg');
     background-size: cover;
     background-position: bottom;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 
     }
 
@@ -109,6 +110,7 @@
       display: flex;
       align-items: center;
       margin-bottom: 0px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
     }
 
     .profile-image {
