--- a/index.html
+++ b/index.html
@@ -438,9 +438,7 @@
   <div class="section" id="fund">
     <div class="profile-content" >
       <div class="profile-fund">
-        <br><br><br><br><br><br><br>
         <h1 class="no-wrap">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp项目资助&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
-        <br><br><br><br><br><br><br>
       </div>
 
       <div class="profile-fundinfo" >
@@ -463,9 +461,7 @@
     <div class="section" id="patent">
       <div class="profile-content-1" >
         <div class="profile-patent" >
-          <br><br><br><br>
-          <h1 class="no-wrap" >&nbsp&nbsp&nbsp&nbsp&nbsp国家知识产权局&nbsp&nbsp&nbsp&nbsp<br>专利授予</h1>
-          <br><br><br><br><br>
+          <h1 class="no-wrap" >&nbsp&nbsp&nbsp&nbsp&nbsp国家知识产权局&nbsp&nbsp&nbsp&nbsp<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp专利授予&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h1>
         </div>
   
         <div class="profile-patentinfo" >
