使得闪烁的星星不再遮挡导航栏

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       width: 100%;
       opacity: 0.97;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+      z-index: 1000; /* 设置导航栏的层叠顺序 */
     }
 
     #navbar ul {
@@ -348,6 +349,7 @@
     <ul>
       <li class = special >柯 晶</a></li>
       <li><a href="#basic-info">基本信息</a></li>
+      <li><a href="#news">科研动态</a></li>
       <li><a href="#publication">论文发表</a></li>
       <li><a href="#book">出版著作</a></li>
       <li><a href="#fund">项目资助</a></li>
