--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
       font-size: 22px;
       margin-bottom: 10px;
     }
+    h5 {
+      font-size: 13px;
+      margin-bottom: 0px;
+    }
+
 
     .profile {
       display: flex;
@@ -381,7 +386,8 @@
         <a href="https://scholar.google.com/citations?user=zX41yC8AAAAJ&hl=zh-CN" target="_blank">
           <img src="mortar-board.svg"  width = "35" height="35">
         </a>
-      
+        <br>
+        <a href="https://scholar.google.com/citations?user=zX41yC8AAAAJ&hl=zh-CN" target="_blank"><h5>谷歌学术：https://scholar.google.com/citations?user=zX41yC8AAAAJ&hl=zh-CN<h5></a>
       </div>
 
       <div class="profile-info" id="basic-info" >
