--- a/index.html
+++ b/index.html
@@ -443,6 +443,7 @@
         <p>8)	<b>J Ke</b>, Y Shen, Y Lu, J Deng, J. D. Wright, Y Zhang, Q Huang, D Wang, N Jing, X Liang & F Jiang. Quantitative analysis of abnormalities in gynecologic cytopathology with deep learning, <i>Laboratory Investigation</i> 101, pp: 513–524, 2021 (SCI中科院2区, 影响因子 IF 5.5).</p>
         <br>
         <h2>会议代表作</h2>
+        <p>1) Q Wu, Y Shen, <b>J Ke</b>. A General Computationally-Efficient 3D Reconstruction Pipeline for Multiple Images with Point Clouds[C]//International Conference on Medical Image Computing and Computer-Assisted Intervention. Cham: Springer Nature Switzerland, 2023: 193-202.
         <p>1)	J Wang, F Ino & <b>J Ke</b>. PRF: A Fast Parallel Relaxed Flooding Algorithm for Voronoi Diagram Generation on GPU. 37th <i>IEEE International Parallel & Distributed Processing Symposium</i> (IPDPS), 2023 (CCF-B). </p>
         <p>2)	J Zhu, Y Shen, H Zhang & <b>J Ke</b>. An Anti-Biased TBSRTC-Category Aware Nuclei Segmentation Framework with A Multi-Label Thyroid Cytology Benchmark, <i>International Conference on Medical Image Computing and Computer-Assisted Intervention</i> (MICCAI) 2023 (CCF-B).</p>
         <p>3)	E L Carbonell, Y Shen, X Yang & <b>J Ke</b>. COVID-19 Pneumonia Classification with Transformer from Incomplete Modalities. MICCAI 2023 (CCF-B).</p>
