--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         <br><br>
         <h4 class="font-color">地址：上海市闵行区东川路800号上海交通大学电子信息与电气工程学院</h4>
         <h4 class="font-color">电子邮箱：kejing@cs.sjtu.edu.cn</h4>
-        <h4 class="font-color">简介：博士毕业于澳大利亚新南威尔士大学，目前在上海交通大学计算机系任助理研究员硕导、新南威尔士大学联席讲师（Adjunct Lecturer）。在S3 Graphics，AMD和CSIRO等机构有多年的商业经验。目前主要的研究方向为病理图像的智能分析诊断及大规模图像的高性能并行计算。在医学图像分析领域以一作或通讯在MedIA、TMI、MICCAI等期刊会议发表论文三十篇；在高性能并行计算领域会议如IPDPS、MICRO、DAC等发表论文十篇。出版著作“通用图形处理器设计-GPGPU编程模型与架构原理”（清华大学出版社）。主持国家自然科学基金青年项目，上海市自然科学基金面上项目，以及两项“交大之星“计划医工交叉研究基金；并于国家知识产权局授权专利三项。担任MICS、CSIG、CAAI等学会专委，Frontiers in Radiology 的主题编委；长期担任TPAMI、TMI和MICCAI等期刊会议的审稿人。</h4>
+        <h4 class="font-color">简介：博士毕业于澳大利亚新南威尔士大学，目前在上海交通大学计算机系任副研究员、硕导，任新南威尔士大学联席讲师（Adjunct Lecturer）。在S3 Graphics，AMD和CSIRO等机构有多年的商业经验。目前主要的研究方向为病理图像的智能分析诊断及大规模图像的高性能并行计算。在医学图像分析领域以一作或通讯在MedIA、TMI、MICCAI等期刊会议发表论文三十篇；在高性能并行计算领域会议如IPDPS、MICRO、DAC等发表论文十篇。出版著作“通用图形处理器设计-GPGPU编程模型与架构原理”（清华大学出版社）。主持国家自然科学基金青年项目，上海市自然科学基金面上项目，以及两项“交大之星“计划医工交叉研究基金；并于国家知识产权局授权专利四项。担任MICS、CSIG、CAAI等学会专委，Frontiers in Radiology 的主题编委。</h4>
 
       </div>
     </div>
