--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     <nav id="navbar">
     <ul>
       <li class = special >Jing Ke</a></li>
-      <li><a href="#basic-info">Basic infomation</a></li>
+      <li><a href="#basic-info">Basic Infomation</a></li>
       <li><a href="#news">Academic Activities</a></li>
       <li><a href="#publication">Publications</a></li>
       <li><a href="#book">Books</a></li>
