--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       <li><a href="#book">Books</a></li>
       <li><a href="#fund">Project Funding</a></li>
       <li><a href="#patent">Patents</a></li>
-      <li><a href="#student">Alumni Achievement</a></li>
+      <li><a href="#student">Alumni Achievements</a></li>
     </ul>
   </nav>
 
