--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
           <p><span class="blinking-star">✨</span><b>24/6/2023</b> 2023 医学图像会议MICCAI 录用论文4篇</p> -->
             
           <p><span class="blinking-star">✨</span><b>26/7/2023</b> Delivered a lecture at the Cambridge Mathematics of Information in Healthcare Hub at the Centre for Mathematical Sciences on <a href="https://talks.cam.ac.uk/talk/index/203542" target="_blank">"Annotation and Practical Problems in Deep Learning based Computational Pathology"</a>.</p>
-          <p><span class="blinking-star">✨</span><b>16/7/2023</b> Gave a keynote speech at the 10th Medical Imaging Computing Seminar (MICS) on "Research on Pathological Image Annotation and Clinical Application Problems Based on Deep Learning.</p>
+          <p><span class="blinking-star">✨</span><b>16/7/2023</b> Gave a keynote speech at the 10th Medical Imaging Computing Seminar (MICS) on "Research on Pathological Image Annotation and Clinical Application Problems Based on Deep Learning".</p>
           <p><span class="blinking-star">✨</span><b>03/7/2023</b> Participated in the 2nd Shanghai Jiao Tong University Artificial Intelligence Exhibition, presenting a video exhibition on "Efficient Diagnosis of Thyroid Cytopathology Images by Artificial Intelligence".</p>
           <p><span class="blinking-star">✨</span><b>24/6/2023</b> Had 4 papers accepted at the 2023 Medical Image Computing and Computer-Assisted Intervention(MICCAI).</p>
 
