--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
         
         <h0 class="no-wrap"><b>Jing Ke(柯晶)</b></h0>
-        <h5 class="font-color">PI, Computational Kernel Lab</h5>
+        <h4 class="font-color" style="white-space: nowrap;">PI, Computational Kernel Lab</h4>
         <br><br>
 
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
@@ -663,6 +663,7 @@ window.addEventListener("scroll", function() {
 
 </body>
 </html>
+
 
 
 
